--- a/src/assets/css/element.scss
+++ b/src/assets/css/element.scss
@@ -1,3 +1,3 @@
-html :deep(.el-loading-mask) {
-  background-color: transparent;
+:deep(.el-loading-mask) {
+  background-color: rgba(250, 250, 250, 0.9);
 }
