--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -15,12 +15,12 @@
 }
 
 /* 公共样式 */
-html, body {
+html,body {
   margin: 0;
 	padding: 0;
 	width: 100%;
   height: 100%;
-	background: #FAFAFA;
+	background-color: rgba(0,0,0,0);
 	font-size: 14px;
 }
 
@@ -28,6 +28,11 @@ html, body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+
+/* 刷新遮罩层 */
+.el-loading-mask {
+	background-color: rgba(250, 250, 250, 0.9);
 }
 
 /* 等级图片 */
